--- a/HTML and CSS Homework/maxtemp.html
+++ b/HTML and CSS Homework/maxtemp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Web Homework</title>
+        <title>Max Temp</title>
         
         <!-- CSS and Bootstrap import -->
         
@@ -33,10 +33,11 @@
                           Visuals
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                          <a class="dropdown-item" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/maxtemp.html"target="_blank" style="target-new: tab;">Max Temperature</a>
-                          <a class="dropdown-item" href="#">Another action</a>
-                          <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
+                            <a class="dropdown-item" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/maxtemp.html">Max Temperature</a>
+                            <a class="dropdown-item" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/humidity.html">Humidity</a>
+                            <a class="dropdown-item" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/Cloudiness.html">Cloudiness</a>
+                            <a class="dropdown-item" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/humidity.html">Humidity</a>
+                          </div>
                       </div>
                       </div>
                     </li>
@@ -51,7 +52,9 @@
 
     </head>
     <body>
-        <p>Notice below the graphs for the City Latitudes verus the Max Temperatures</p>
-        <img src="resources\assets\images\Fig1.png"
+        <blockquote class="blockquote text-center">
+            <p class="p-3 mb-0 bg-info text-white">Notice below the graphs for the City Latitudes verus the Max Temperatures</p>
+        <img src="resources\assets\images\Fig1.png"class="rounded mx-auto d-block" alt="...">
+    </blockquote>
 
 </html>
