--- a/HTML and CSS Homework/comparison.html
+++ b/HTML and CSS Homework/comparison.html
@@ -57,7 +57,7 @@
           <div class="col p-3 mb-0 bg-info text-white">
             <p>The purpose of this project was to figure out the weather as you got closer to the equator. In order to accomplish this goal we had to use the OpenWeatherMap API. The API allowed us to gather data on 500 cities. </p>
             
-            <p> We have now pulled in all of this data, so we were able to use Matplotlib in Jupyter Notebook to plot various aspects of the weather vs lattitude. Things that we looked at while we were plotting this information includes: temperature, cloudiness,</p> 
+            <p> we had all of this data we were able to use Matplotlib in Jupyter Notebook to plot various aspects of the weather vs lattitude. Things that we looked at while we were plotting this information includes: temperature, cloudiness,</p> 
           </div>
           <div class="col">
             <img src="https://www.precisionpaincarerehab.com/editor-uploads/website-1004/joint-pain-weather-changes2-1514968856.jpg" height="350px">
