Cleaned up links
Updated with cleaned up links and active

--- a/HTML and CSS Homework/humidity.html
+++ b/HTML and CSS Homework/humidity.html
@@ -19,8 +19,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                   <ul class="navbar-nav">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/landing.html"target="_blank" style="target-new: tab;">Home <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                      <a class="nav-link" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/landing.html">Home</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/comparison.html">Comparison</a>
@@ -28,10 +28,10 @@
                     <li class="nav-item">
                       <a class="nav-link" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/data.html">Data</a>
                     </li>
-                    <dili class="dropdown">
+                    <dili class="dropdown active">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Visuals
-                        </button>
+                          <span class="sr-only">(current)</span></button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                             <a class="dropdown-item" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/maxtemp.html">Max Temperature</a>
                             <a class="dropdown-item" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/humidity.html">Humidity</a>
