--- a/HTML and CSS Homework/comparison.html
+++ b/HTML and CSS Homework/comparison.html
@@ -19,11 +19,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                   <ul class="navbar-nav">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/landing.html"target="_blank" style="target-new: tab;">Home <span class="sr-only">(current)</span></a>
-                    </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/comparison.html">Comparison</a>
+                      <a class="nav-link" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/landing.html">Home</a>
+                    </li>
+                    <li class="nav-item active">
+                      <a class="nav-link" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/comparison.html">Comparison<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/data.html">Data</a>
@@ -92,6 +92,5 @@
             </div>
         </div>
     </div>
-    <footer>Page 6 - Comparison</footer>
 </body>
 </html>
