--- a/HTML and CSS Homework/maxtemp.html
+++ b/HTML and CSS Homework/maxtemp.html
@@ -19,14 +19,14 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                   <ul class="navbar-nav">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/landing.html"target="_blank" style="target-new: tab;">Home <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                      <a class="nav-link" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/landing.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/maxtemp.html"target="_blank" style="target-new: tab;">Comparison</a>
+                      <a class="nav-link" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/maxtemp.html">Comparison</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Data</a>
+                      <a class="nav-link" href="file:///C:/Users/Christina/Documents/GitHub/Homework/HTML%20and%20CSS%20Homework/data.html">Data</a>
                     </li>
                     <dili class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
